# rules_mypy

./: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-mypy-bazel  bazel-out  bazel-testlogs  justfile  mypy.bash.tpl  mypy.py  pin.sh  proto.bzl  python.bzl  requirements.txt  requirements_lock.txt  test.sh
.trunk/: trunk.yaml
mypy_bazel/proto/: BUILD.bazel  foo.proto
mypy_bazel/python/: BUILD.bazel  foo_fails.py  foo_passes.py
mypy_rules/: BUILD.bazel  mypy.bash.tpl  mypy.py  proto.bzl  python.bzl
repositories/: deps.bzl  install.bzl  setup.bzl
test/: test_helper.sh  test_runner.sh
test/proto/v1/: BUILD.bazel  foo.proto
test/python/: BUILD.bazel  foo_fails.py  foo_passes.py
