load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@mypy_pypi//:requirements.bzl", "requirement")
load("@rules_proto_grpc//:defs.bzl", "proto_plugin")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

exports_files([
    "mypy.ini",
    "mypy.py",
    "mypy.bash.tpl",
])

proto_plugin(
    name = "mypy_plugin",
    outputs = ["{protopath|python}_pb2.pyi"],
    tool = "@mypy_pypi_mypy_protobuf//:rules_python_wheel_entry_point_protoc-gen-mypy",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_mypy_plugin",
    outputs = ["{protopath|python}_pb2_grpc.pyi"],
    tool = "@mypy_pypi_mypy_protobuf//:rules_python_wheel_entry_point_protoc-gen-mypy_grpc",
    visibility = ["//visibility:public"],
)

label_flag(
    name = "mypy_ini",
    build_setting_default = "//:mypy.ini",
    visibility = ["//visibility:public"],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)
