load("@rules_proto_grpc//:defs.bzl", "proto_plugin")

exports_files([
    "mypy.py",
    "mypy.bash.tpl",
])

proto_plugin(
    name = "mypy_plugin",
    # exclusions = [
    #     "google/protobuf",
    # ],
    outputs = ["{protopath|python}_pb2.pyi"],
    tool = "@pypi_mypy_protobuf//:rules_python_wheel_entry_point_protoc-gen-mypy",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_mypy_plugin",
    outputs = ["{protopath|python}_pb2_grpc.pyi"],
    tool = "@pypi_mypy_protobuf//:rules_python_wheel_entry_point_protoc-gen-mypy_grpc",
    visibility = ["//visibility:public"],
)
