load("@mypy_pypi//:requirements.bzl", "requirement")
load("//:python.bzl", "py_library")

py_library(
    name = "foo_passes",
    srcs = ["foo_passes.py"],
    deps = [
        "//test/proto/v1:foo_py_pb2",
        requirement("types-protobuf"),
    ],
)

py_library(
    name = "foo_fails",
    srcs = ["foo_fails.py"],
    deps = [
        "//test/proto/v1:foo_py_pb2",
        requirement("types-protobuf"),
    ],
)
