load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:proto.bzl", "py_proto_library")

proto_library(
    name = "proto",
    srcs = [
        "foo.proto",
    ],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

py_proto_library(
    name = "foo_py_pb2",
    protos = [":proto"],
    visibility = ["//visibility:public"],
)
